[tool.poetry]
name = "convert-files"
version = "0.1.0"
description = "Convert files to different formats using Zamzar's API"
authors = ["Sam Gorinsky <sgorinsky@gmail.com>"]
license = "GNU General Public License"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
